--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -1,23 +1,20 @@
 .section {
   margin-top: 70px;
-  padding-left: 24px;
-  padding-bottom: 24px;
-  padding-right: 24px;
+  padding: 24px;
 }
 
 .section__title {
-  margin-top: 8px;
-  margin: 0 auto;
   font-size: 48px;
+  line-height: 1.2;
   text-align: center;
+  color: #402e32;
 }
 
 .gallery {
   display: grid;
   max-width: calc(100vw - 60px);
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 24px;
+  margin: 0 auto;
+  padding: 24px;
   grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
   gap: 16px;
 }
@@ -37,6 +34,7 @@
   font-size: 18px;
   line-height: 1.15;
   font-weight: 500;
+  text-shadow: 1px 1px 2px #fff;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -48,5 +46,7 @@
 }
 
 .item__details > summary {
+  margin-bottom: 4px;
   text-align: center;
+  cursor: help;
 }
