--- a/src/components/Gallery/Gallery.module.css
+++ b/src/components/Gallery/Gallery.module.css
@@ -1,8 +1,9 @@
 .gallery {
-    display: grid;
-    max-width: calc(100vw - 60px);
-    margin: 0 auto;
-    padding: 24px;
-    grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
-    gap: 16px;
-  }
+  display: grid;
+  max-width: calc(100vw - 60px);
+  margin: 0 auto;
+  padding: 24px;
+  grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
+  text-align: center;
+  gap: 16px;
+}
