--- a/src/components/GalleryItem/GalleryItem.module.css
+++ b/src/components/GalleryItem/GalleryItem.module.css
@@ -7,6 +7,11 @@
   box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),
     0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
 }
+.gallery__image{
+  min-height: 405px;
+  margin: 0 auto;
+  object-fit: cover;
+}
 
 .item__title {
   margin: 8px;
